Make sure the messages div is not overlapping with entries

--- a/resources/css/library.css
+++ b/resources/css/library.css
@@ -112,7 +112,9 @@ body {
 }
 
 .messages {
-    width: var(--two-column-width);
+    width: 100%;
+    /* This was added to avoid the problem of parents of floated elements */
+    overflow: auto;
 }
 
 .message-entry {
